# DevOpsCpp

./: .clang-format  .drone.yml  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: codeql.yml  macos.yml  release.yml  ubuntu.yml  windows.yml
